--- a/home_style.css
+++ b/home_style.css
@@ -15,3 +15,11 @@ th, tr, td {
 th {
     background-color: cornsilk
 }
+
+#tab2 {
+    visibility: hidden;    
+}
+
+#button_products {
+    visibility: hidden;
+}
